# agent-setup

./: .env.docker.template  .env.template  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  RLM_INTEGRATION.md  RLM_QUICKSTART.md  _test_pgvector.py  conftest.py  demo_rlm.py  docker-compose.prod.yml  docker-compose.yml  free-apikey-list.txt  langgraph.json  new_agent_plan.md  packages.txt  proxy_config.yml  pyproject.toml  serve.py  skills-lock.json  test_rlm_enhanced.py  test_rlm_standalone.py
.claude/: settings.json
.claude/skills/gitnexus-cli/: SKILL.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
deploy/docker/: init-db.sql  init-phoenix-db.sql
deploy/kubernetes/: app.yml  configmap.yml  infra.yml  kustomization.yml  namespace.yml  secrets.yml
docker-parts/: database.yml  graphdb.yml  llm.yml  observability.yml  oxigraph.yml  rdf.yml  vectordb.yml
docs/: agent-development.md  api-reference.md  architecture.md  arize-phoenix-llms.txt  arize-phoenix.md  cognee-llms.txt  cognee.md  deep-eval.md  deep_eval_links.txt  deployment.md  getting-started.md  giskard.md  guidance.md  langchain-llms.txt  makefile.md  multi-agent.md  multimodal-rag.md  phoenix-eval.md  rdf_memory.md  rlm.md  sql_toolkit.md  update-external-repos.md  update_link_arize_phoenix.txt  update_link_cognee.txt  update_link_langchain-llms.txt  vector-storage.md
logs/: rlm_2026-04-08_12-25-32_b67869fb.jsonl
src/agents/: __init__.py
src/agents/_template/: __init__.py  agent.py  prepare.py
src/agents/agent1/: __init__.py  agent.py
src/agents/autoresearch/: __init__.py  agent.py
src/agents/code_runner/: __init__.py  agent.py
src/agents/deepconf_agent/: __init__.py  agent.py
src/agents/knowledge_agent/: __init__.py  agent.py
src/agents/rag_agent/: __init__.py  agent.py
src/agents/rdf_reader/: __init__.py  agent.py  tools.py
src/agents/rlm_agent/: __init__.py  agent.py  schemas.py
src/agents/text2sql_agent/: __init__.py  agent.py
src/shared/: __init__.py  env_validation.py  llm.py  memory.py  p2p_orchestration.py  registry.py  tracing.py  types.py
src/shared/cognee_toolkit/: __init__.py  config.py  memory.py  nodes.py  search.py  tools.py
src/shared/deep_eval/: __init__.py  agent_evaluators.py  (+7 more)
(+316 files in other folders)
